--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=test dotenv -e .env.test jest --config ./test/jest-e2e.json"
+    "test:e2e": "cross-env NODE_ENV=test dotenv -e .env.test jest --config ./test/jest-e2e.json",
+    "db.seed": "ts-node src/common/prisma/seed.ts"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
